Updated Dropdown and File uploader

--- a/form/form-collection/src/App.css
+++ b/form/form-collection/src/App.css
@@ -318,7 +318,90 @@
   padding-right: 10vh;
   
 }
+.dropdown-container {
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+
+.dropdown-button {
+  padding: 10px;
+  font-weight: bold;
+  text-transform: capitalize;
+  transition: all 0.3s ease-in-out;
+}
+
+.dropdown-content {
+ 
+  position: absolute;
+  
+  overflow: hidden;
+  width: 10%;
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 4px;
+  box-shadow: 0 0 5px black;
+  z-index: 10;
+  display: none;
+  line-height: 1.5;
+  font-size: 14px;
+  padding: 5px;
+}
 
 
 
 
+.dropdown-container:hover .dropdown-content {
+  display: block;
+}
+
+.dropdown-content li {
+  list-style-type: none;
+}
+
+.dropdown-title {
+  font-weight: bold;
+  color: blue;
+}
+
+.dropdown-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+
+.main-button {
+  display: inline-block;
+  padding: 0.9rem 1.8rem;
+  font-size: 16px;
+  font-weight: 700;
+  color: black;
+  border: 3px solid rgb(252, 70, 100);
+  cursor: pointer;
+  position: relative;
+  background-color: transparent;
+  text-decoration: none;
+  overflow: hidden;
+  z-index: 1;
+  font-family: inherit;
+}
+
+.main-button::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(252, 70, 100);
+  transform: translateX(-100%);
+  transition: all 0.3s;
+  z-index: -1;
+}
+
+.main-button:hover::before {
+  transform: translateX(0);
+}
